--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+server.compression.enabled=true
+# You can also configure the compression thresholds like this
+server.compression.min-response-size=${SERVER-COMPRESSION-SIZE}
+server.compression.mime-types=text/html,text/xml,text/plain,text/css,application/json
