--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 spring.application.name=spring-boot-project
 
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
+# Configuração para SQLite3
+spring.datasource.url=jdbc:sqlite:database.db
+spring.datasource.driver-class-name=org.sqlite.JDBC
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.community.dialect.SQLiteDialect
+
+# Admin configuration (username only - password must be set via environment variable)
+admin.username=admin
+# Admin configuration
+admin.username=admin
+# admin.password should be set via environment variable ADMIN_PASSWORD
