feat: update JWT utility for improved token handling and refactor dotenv initialization

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,13 +8,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.community.dialect.SQLiteDialect
 
-# Admin configuration (username only - password must be set via environment variable)
 admin.username=admin
-# Admin configuration
-admin.username=admin
-# admin.password should be set via environment variable ADMIN_PASSWORD
 
 server.compression.enabled=true
-# You can also configure the compression thresholds like this
-server.compression.min-response-size=${SERVER-COMPRESSION-SIZE}
+server.compression.min-response-size=${SERVER_COMPRESSION_SIZE}
 server.compression.mime-types=text/html,text/xml,text/plain,text/css,application/json
