feat: enhance configuration and security; refactor JWT handling, logging, and dotenv integration

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,14 @@
 # .env.example
 
 # name application
-SPRING_APPLICATION_NAME=spring-boot-project
+SPRING_APPLICATION_NAME=
 
-# database configuration
-DB_URL=jdbc:postgresql://localhost:5432/your_database
-DB_USERNAME=your_user
-DB_PASSWORD=your_password
+# admin configuration
+ADMIN_USERNAME=
+ADMIN_PASSWORD=
+
+# cache configuration
+SERVER_COMPRESSION_MIN_RESPONSE_SIZE=1024 #example value
+
+# JWT Configuration
+JWT_SECRET_KEY=
