--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.community.dialect.SQLiteDi
 admin.username=admin
 
 server.compression.enabled=true
-server.compression.min-response-size=${SERVER_COMPRESSION_SIZE}
+server.compression.min-response-size=${SERVER_COMPRESSION_MIN_RESPONSE_SIZE}
 server.compression.mime-types=text/html,text/xml,text/plain,text/css,application/json
+
+
+# JWT Configuration
+jwt.secret=${JWT_SECRET_KEY}
