feat: implements caching

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,10 @@ server.compression.mime-types=text/html,text/xml,text/plain,text/css,application
 
 # JWT Configuration
 jwt.secret=${JWT_SECRET_KEY}
+
+# Redis configuration
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password= 
+spring.redis.timeout=6000
+spring.cache.type=redis
