--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,24 @@
 	</properties>
 
 	<dependencies>
+	
+		<!-- Jackson Databind -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.16.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.16.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.16.0</version>
+		</dependency>
+		
 		<!-- Web and Security dependencies, versions managed by Spring Boot -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
