--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,14 @@
 			<artifactId>jackson-core</artifactId>
 			<version>2.20.1</version>
 		</dependency>
+
+        <!-- lombok implements -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+            <scope>provided</scope>
+        </dependency>
 		
 		<!-- Web and Security dependencies, versions managed by Spring Boot -->
 		<dependency>
